--- a/material management.html
+++ b/material management.html
@@ -241,8 +241,7 @@
                                     </div>
                                 </div>
 
-                                <form action="">
-
+                                <form action="" class="needs-validation" novalidate method="post">
 
 
                                     <!--material id filed-->
@@ -251,8 +250,9 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="materialid">Material ID</span>
-                                            <input type="text" class="form-control" disabled>
+                                                id="labelMaterialId">Material ID</span>
+                                            <input type="text" class="form-control" id="textMaterialId" readonly
+                                                required>
                                         </div>
                                     </div>
 
@@ -262,11 +262,12 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="name">Name<span
-                                                    class="text-danger">
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelMaterialName">Name<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" required>
+                                            <input type="text" class="form-control" id="textMaterialName" required>
                                         </div>
+                                        <div class="invalid-feedback"> Please type Material Name.</div>
                                     </div>
 
 
@@ -276,14 +277,13 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="materialcategory">Category<span class="text-danger">
+                                                id="labelMaterialCategory">Category<span class="text-danger">
                                                     *</span></span>
-                                            <select class="form-select" aria-label="Default select example">
-                                                <option selected>Select Category</option>
-                                                <option value="1">One</option>
-                                                <option value="2">Two</option>
-                                                <option value="3">Three</option>
+                                            <select class="form-select" id="selectMaterialCategory" required>
+                                                <option value="" selected disabled>Select Category</option>
+
                                             </select>
+                                            <div class="invalid-feedback"> Please select category.</div>
                                         </div>
                                     </div>
 
@@ -296,35 +296,25 @@
                                                 style="background-color:#343a40; color: #ffffff;" id="image">Available
                                                 Quantity<span class="text-danger">
                                                     *</span></span>
-
-                                            <select class="form-select" aria-label="Default select example">
-                                                <option selected>Select available quantity</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
+                                            <select class="form-select" id="selectAvailableQuantity" required>
+                                                <option value="" selected disabled>Select available quantity</option>
                                             </select>
-
+                                            <div class="invalid-feedback"> Please select available quantity.</div>
                                         </div>
                                     </div>
-
 
                                     <!--ROP filed-->
                                     <div class="row mt-3">
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Reorder
+                                                style="background-color:#343a40; color: #ffffff;" id="labelRop">Reorder
                                                 point<span class="text-danger">
                                                     *</span></span>
-
-                                            <select class="form-select" aria-label="Default select example">
-                                                <option selected>Select ROP</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
+                                            <select class="form-select" id="selectRop" required>
+                                                <option value="" selected disabled>Select ROP</option>
                                             </select>
-
-
+                                            <div class="invalid-feedback"> Please select Reorder Point.</div>
                                         </div>
                                     </div>
 
@@ -334,19 +324,16 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="image">Reorder
+                                                style="background-color:#343a40; color: #ffffff;" id="labelRoq">Reorder
                                                 Quantity<span class="text-danger">
                                                     *</span></span>
-
-                                            <select class="form-select" aria-label="Default select example">
-                                                <option selected>Select ROQ</option>
-                                                <option value="1">1</option>
-                                                <option value="2">2</option>
-                                                <option value="3">3</option>
+                                            <select class="form-select" id="selectRoq" required>
+                                                <option value="" selected disabled>Select ROQ</option>
                                             </select>
-
+                                            <div class="invalid-feedback"> Please select Reorder Quantity.</div>
                                         </div>
                                     </div>
+
 
                                     <!--purchase price-->
                                     <div class="row mt-3">
@@ -356,7 +343,8 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="purchaseprice">Purchase price<span class="text-danger">
                                                     *</span></span>
-                                            <input type="text" class="form-control" required>
+                                            <input type="text" class="form-control" required id="textPurchasePrice">
+                                            <div class="invalid-feedback"> Please Enter purchase price.</div>
                                         </div>
                                     </div>
 
@@ -366,11 +354,12 @@
                                         <div class="input-group">
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
-                                                style="background-color:#343a40; color: #ffffff;" id="totalqty">Total
+                                                style="background-color:#343a40; color: #ffffff;"
+                                                id="labelTotalQuantity">Total
                                                 Quantity<span class="text-danger">
                                                     *</span></span>
-
-                                            <input type="text" class="form-control" required>
+                                            <input type="text" class="form-control" id="textTotalQuantity" required>
+                                            <div class="invalid-feedback"> Please Enter total quantity.</div>
                                         </div>
                                     </div>
 
@@ -381,21 +370,21 @@
                                             <span class="input-group-text col-4 fw-bold"
                                                 onClick=this.parentNode.children[1].focus();
                                                 style="background-color:#343a40; color: #ffffff;"
-                                                id="status">Status<span class="text-danger">
+                                                id="labelStatus">Status<span class="text-danger">
                                                     *</span></span>
 
                                             <div class="form-check">
-                                                <input class="form-check-input m-1" type="radio" name="flexRadioDefault"
-                                                    id="in stock" checked>
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-1" type="radio" name="radioStatus"
+                                                    id="radioInStock" checked>
+                                                <label class="form-check-label" for="radioInStock">
                                                     In Stock
                                                 </label>
                                             </div>
 
                                             <div class="form-check">
-                                                <input class="form-check-input m-1" type="radio" name="flexRadioDefault"
-                                                    id="out of stock">
-                                                <label class="form-check-label" for="flexRadioDefault2">
+                                                <input class="form-check-input m-1" type="radio" name="radioStatus"
+                                                    id="radioOutOfStock">
+                                                <label class="form-check-label" for="radioOutOfStock">
                                                     Out of Stock
                                                 </label>
                                             </div>
@@ -410,39 +399,35 @@
                                                 style="background-color:#343a40; color: #ffffff;"
                                                 id="imageOrientation">Notes<span class="text-danger">
                                                     *</span></span>
-
-                                            <div class="form-floating">
-                                                <textarea class="form-control" placeholder="Leave a comment here"
-                                                    id="floatingTextarea"></textarea>
-                                                <label for="floatingTextarea"></label>
-                                            </div>
+                                            <textarea class="form-control" id="textareaNotes"></textarea>
                                         </div>
                                     </div>
+                           
 
-                                    <!--create user and clear button-->
-                                    <div class="row mt-5">
-                                        <div class="col-6 text-start">
-                                            <button type="reset" id="submit" value="Clear" class="btn btn-secondary"><i
-                                                    class="fa-solid fa-eraser" style="color: #ffffff;"></i>
-                                                Clear</button>
-                                        </div>
+                            <!--create user and clear button-->
+                            <div class="row mt-5">
+                                <div class="col-6 text-start">
+                                    <button type="reset" id="submit" value="buttonClear" class="btn btn-secondary"><i
+                                            class="fa-solid fa-eraser" style="color: #ffffff;"></i>
+                                        Clear</button>
+                                </div>
 
-                                        <div class="col-6 text-start">
-                                            <button type="submit" id="submit" value="Add Employee"
-                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                    style="color: #ffffff;"></i> Add</button>
+                                <div class="col-6 text-start">
+                                    <button type="submit" id="buttonSubmit" value="Add Employee" class="btn btn-success"><i
+                                            class="fa-solid fa-user-plus" style="color: #ffffff;"></i> Add</button>
 
-                                        </div>
-                                    </div>
-                                </form>
+                                </div>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
-                <div class="col-1"></div>
             </div>
+            <div class="col-1"></div>
         </div>
     </div>
+    </div>
+    <script src="validation.js"></script>
 </body>
 
 </html>
