--- a/users.html
+++ b/users.html
@@ -21,6 +21,16 @@
 
     <!--link font awesome css file-->
     <link rel="stylesheet" href="../../Resources/fontawesome/fontawesome-free-6.6.0/css/all.min.css">
+
+
+    <style>
+        .scrollable-card {
+            height: 500px;
+            /* Set the desired height */
+            overflow-y: auto;
+            /* Enable vertical scrolling */
+        }
+    </style>
 </head>
 
 
@@ -204,7 +214,7 @@
                         <div class="card">
                             <img src="../images/bg.png" class="card-img" alt="Background Image">
                             <div class="card-img-overlay d-flex align-items-center justify-content-center">
-                                <div class="card-body">
+                                <div class="card-body scrollable-card">
 
                                     <!--required mark-->
                                     <div class="row">
@@ -213,24 +223,26 @@
                                         </div>
                                     </div>
 
-                                    <form action="">
+                                    <form action="" class="needs-validation" novalidate method="post">
 
-                                        <!--employees dropdown-->
+
+                                        <!--employee names datalist-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="employeeName">Employee<span class="text-danger">
+                                                    id="labelEmployeeName">Employee<span class="text-danger">
                                                         *</span></span>
-
-
-                                                <input class="form-control" list="datalistOptions" id="exampleDataList"
-                                                    placeholder="Type to search...">
+                                                <input class="form-control" list="datalistOptions"
+                                                    id="datalistEmployeeName" placeholder="Type to search..." required>
                                                 <datalist id="datalistOptions">
                                                     <option value="Amal Perera">
                                                     <option value="Nimal Fernando">
                                                 </datalist>
+                                                <div class="invalid-feedback">
+                                                    Please select the Employee Name.
+                                                </div>
                                             </div>
                                         </div>
 
@@ -241,12 +253,16 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="username">Username<span class="text-danger">
+                                                    id="labelEmpUsername">Username<span class="text-danger">
                                                         *</span></span>
                                                 <input type="text" class="form-control" placeholder="Type Username..."
-                                                    required>
+                                                    id="textEmpUsername" required autocomplete="off">
+                                                <div class="invalid-feedback">
+                                                    Please type the Username.
+                                                </div>
                                             </div>
                                         </div>
+
 
                                         <!--password field-->
                                         <div class="row mt-3">
@@ -254,12 +270,16 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="password">Password<span class="text-danger">
+                                                    id="labelPassword">Password<span class="text-danger">
                                                         *</span></span>
-                                                <input type="password" class="form-control"
-                                                    placeholder="Type Password..." required>
+                                                <input type="password" class="form-control" id="textEmpPassword"
+                                                    placeholder="Type Password..." autocomplete="off" required>
+                                                <div class="invalid-feedback">
+                                                    Please type the password.
+                                                </div>
                                             </div>
                                         </div>
+
 
                                         <!--email-->
                                         <div class="row mt-3">
@@ -267,12 +287,16 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="email">Email<span class="text-danger">
+                                                    id="labelEmpEmail">Email<span class="text-danger">
                                                         *</span></span>
                                                 <input type="email" class="form-control" placeholder="Type email..."
-                                                    required>
+                                                    id="textEmpEmail" required>
+                                                <div class="invalid-feedback">
+                                                    Please type the Email.
+                                                </div>
                                             </div>
                                         </div>
+
 
                                         <!--roles checkboxes-->
                                         <div class="row mt-3">
@@ -280,25 +304,27 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="roles">Roles<span class="text-danger">
+                                                    id="labelRoles">Roles<span class="text-danger">
                                                         *</span></span>
-
                                                 <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="checkbox" id="owner"
+                                                    <input class="form-check-input" type="checkbox" id="checkboxOwner"
                                                         value="owner">
-                                                    <label class="form-check-label" for="inlineCheckbox1">Owner</label>
+                                                    <label class="form-check-label" for="checkboxOwner">Owner</label>
                                                 </div>
                                                 <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="checkbox" id="sales manager"
-                                                        value="Sales">
-                                                    <label class="form-check-label" for="inlineCheckbox2">Sales
+                                                    <input class="form-check-input" type="checkbox"
+                                                        id="checkboxSalesManager" value="Sales">
+                                                    <label class="form-check-label" for="checkboxSalesManager">Sales
                                                         Manager</label>
                                                 </div>
                                                 <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="checkbox" id="Cashier"
+                                                    <input class="form-check-input" type="checkbox" id="checkboxCashier"
                                                         value="Cashier">
                                                     <label class="form-check-label"
-                                                        for="inlineCheckbox2">Cashier</label>
+                                                        for="checkboxCashier">Cashier</label>
+                                                </div>
+                                                <div class="invalid-feedback">
+                                                    Please select at least one role.
                                                 </div>
                                             </div>
                                         </div>
@@ -311,15 +337,15 @@
                                                     style="background-color:#343a40; color: #ffffff;"
                                                     id="basic-addon1">Status<span class="text-danger">
                                                         *</span></span>
-
                                                 <div class="form-check form-switch m-2">
                                                     <input class="form-check-input" type="checkbox"
-                                                        id="flexSwitchCheckChecked" checked>
+                                                        id="switchStatus" checked>
                                                     <label class="form-check-label"
-                                                        for="flexSwitchCheckChecked">Active</label>
+                                                        for="switchStatus">Active</label>
                                                 </div>
                                             </div>
                                         </div>
+
 
                                         <!--create user and clear button-->
                                         <div class="row mt-5">
@@ -333,7 +359,6 @@
                                                 <button type="submit" id="submit" value="Add Employee"
                                                     class="btn btn-success"><i class="fa-solid fa-user-plus"
                                                         style="color: #ffffff;"></i> Add</button>
-
                                             </div>
                                         </div>
                                     </form>
@@ -345,6 +370,7 @@
             </div>
         </div>
     </div>
+    <script src="validation.js"></script>
 </body>
 
 </html>
